docs/manifests/netpol-debug-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-ingress-all
  namespace: cavendish-staging
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: analytics-api
  policyTypes:
    - Ingress
  ingress:
    - {}
